--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body{
     font-family: 'Inter', sans-serif;
 }
+.cover{
+    background-image: url(/images/donation0.jpg);
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+}
